# brutal-recipes

./: .editorconfig  .gitignore  .prettierrc.yaml  .travis.yml  CHANGELOG.md  CNAME  LICENSE  README.md  TODO.md  about.html  archive.html  brutal-recipes.cabal  brutal-recipes.nix  builder.sh  cabal.project  contact.html  default.nix  deploy.sh  index.html  nixpkgs-19.09.json  nixpkgs-latest.json  pandoc.nix  release.nix  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
css/: default.css
generator/: default.nix
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
result/: about.html  archive.html  contact.html  index.html
result/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
site-generator/: default.nix  shell.nix  site-generator.cabal  site-generator.nix  site.hs
src/: about.rst  contact.markdown  index.html
src/posts/: 2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2021-16-04-pizza.markdown
src/recipes/: nuclino-export-structure.md
src/recipes/.nuclino-export/: index.md  links.md
src/recipes/nuclino-export/: Bolognese a02f64e9.md  Brokkoli Suppe mit Ziegenkäse - nach Ramsay 495ff9d4.md  Brutus Salad  10_10 80873e37.md  Butter-Rosmarin-Zitronen Sauce c66ce400.md  Cajun-Lachs aus der Pfanne 1d5e9c40.md  Chiliöl 9f0068f2.md  Cocktails & Long Drinks 0bbfe4f2.md  (+28 more)
src/templates/: default.html  footer.html
(+67 files in other folders)
